# scp-label-maker

./: .gitignore  Cargo.toml  LICENSE  README  README.md  build.py
src/: app.rs  main.rs
src/core/: asset_manager.rs  image_processor.rs  label_composer.rs  mod.rs  noise_generator.rs  text_renderer.rs
src/models/: class_type.rs  hazard.rs  label_config.rs  layout.rs  mod.rs
src/ui/: input_panel.rs  mod.rs  preview_panel.rs  theme.rs
src/utils/: error.rs  logger.rs  mod.rs  validation.rs
