[package]
name = "scp-label-maker"
version = "0.2.2"
edition = "2021"
authors = ["SCP Label Maker Team"]
description = "Generate authentic SCP Foundation labels with custom images and hazard warnings"
license = "MIT"

[dependencies]
# GUI Framework
iced = { version = "0.12", features = ["tokio", "image", "canvas", "advanced", "lazy"] }

# Image Processing
image = { version = "0.24.9", features = ["png", "jpeg", "gif", "bmp", "ico", "tiff", "webp", "avif", "pnm", "dds", "tga"] }
imageproc = "0.23.0"
gif = "0.14.1"
# Font Rendering
rusttype = "0.9"

# File Dialogs
rfd = "0.14"

# Serialization (for future presets feature)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
base64 = "0.21"

# Archiving
zip = { version = "0.6", features = ["deflate"] }
tempfile = "3.10"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Utilities
once_cell = "1.19"
ab_glyph = "0.2.32"
fern = { version = "0.7.1", features = ["colored"] }
chrono = "0.4.42"
log = "0.4.29"
colored = "3.0.0"
atty = "0.2.14"
rand = "0.8.5"


[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "scp-label-maker"
path = "src/main.rs"
